--- a/kargo/stage-dev.yaml
+++ b/kargo/stage-dev.yaml
@@ -4,16 +4,45 @@ metadata:
   name: dev
   namespace: dbt-pipeline
 spec:
-  subscriptions:
-    warehouse: dbt-images
-  promotionMechanisms:
-    gitRepoUpdates:
-    - repoURL: https://github.com/jbluemel/dbt-gitops.git
-      writeBranch: main
-      kustomize:
-        images:
-        - image: ghcr.io/jbluemel/dbt-postgres
-          path: environments/dev
-    argoCDAppUpdates:
-    - appName: dbt-dev
-      appNamespace: argocd
+  requestedFreight:
+  - origin:
+      kind: Warehouse
+      name: dbt-images
+    sources:
+      direct: true
+  promotionTemplate:
+    spec:
+      vars:
+      - name: gitRepo
+        value: https://github.com/jbluemel/dbt-gitops.git
+      - name: imageRepo
+        value: ghcr.io/jbluemel/dbt-postgres
+      steps:
+      - uses: git-clone
+        config:
+          repoURL: ${{ vars.gitRepo }}
+          checkout:
+          - branch: main
+            path: ./out
+      - uses: kustomize-set-image
+        as: update-image
+        config:
+          path: ./out/environments/dev
+          images:
+          - image: ${{ vars.imageRepo }}
+            tag: ${{ imageFrom(vars.imageRepo).Tag }}
+      - uses: git-commit
+        as: commit
+        config:
+          path: ./out
+          messageFromSteps:
+          - update-image
+      - uses: git-push
+        config:
+          path: ./out
+          targetBranch: main
+      - uses: argocd-update
+        config:
+          apps:
+          - name: dbt-dev
+            namespace: argocd
