--- a/environments/dev/kustomization.yaml
+++ b/environments/dev/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
 namespace: data-platform-dev
-
 resources:
-  - ../../base
-
+- ../../base
 namePrefix: dev-
+images:
+- name: ghcr.io/jbluemel/dbt-postgres
+  newTag: latest
